@@ -1,0 +1,9 @@
+Title: websphere_mq_instance, websphere_mq_instance.manager: new checks for Websphere MQ
+Level: 1
+Component: checks
+Compatible: compat
+Version: 1.4.0i3
+Date: 1480687552
+Class: feature
+
+
