@@ -1,0 +1,18 @@
+title: IBM Websphere MQ Instances
+agents: aix, linux
+catalog: app/WebsphereMQ
+license: GPL
+distribution: check_mk
+description:
+ This check monitors the Websphere MQ instances.
+ In order to work it is necesarry to install the <tt>websphere_mq</tt> plugin
+ to the server.  You might need to edit this plugin to fit your needs.
+
+ The instance state is configurable.
+
+item:
+ The name of the instance.
+
+inventory:
+ One service will be created for each instance.
+
